fixed overflow scrolling issue with page contents.

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ h1 {
 	font-style: italic;
 }
 #LogoDiv {
-	position: absolute;
+	position: fixed;
 	height: 75px;
 	width: 75px;
 	top: 20px;
@@ -17,6 +17,11 @@ h1 {
 	position: relative;
 	padding-top: 10px;
 	padding-left: 85px;
+}
+#bannerBumper {
+	background-color: white;
+	position: relative;
+	height: 3px;
 }
 #LinksBanner {
 	background-color: #33cc33;
@@ -54,6 +59,7 @@ body {
 	background-color: gray;
 	margin: 0;
 	padding: 0;
+	height: 100%;
 }
 ul {
 	list-style-type: none;
@@ -81,22 +87,15 @@ ul {
 	height: 100%;
 	width: 100%;
 }
-#bannerBumper {
-	background-color: white;
-	height: 3px;
-}
-#content-scroll-wrap {
-	height: 100%;
-}
 #test {
 	z-index: 1;
-	position: absolute;
-	top: 0%;
+	position: fixed;
+	top: 124px;
 	width: 80%;
 	margin: auto;
-	left: 0%;
-	right: 0%;
-	bottom: 0%;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	overflow: auto;
 	background-color: #f2f2f2;
 	box-shadow: 10px 0px 10px #595959;
